Start working on support for Event Bus 6.0